[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.8"
log = "^0.4"
